fea-rs/test-data/compile-tests/mini-latin/bad/duplicate_named_lookup.fea

lookup foo {
    pos a b 3;
} foo;

lookup foo {
    sub x by y;
} foo;
